intelligent_shipping_ws/rl-baselines3-zoo.tar/rl-baselines3-zoo/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ship3dof
  labels:
    app.kubernetes.io/name: ship3dof
    app.kubernetes.io/part-of: rl-baselines3-zoo
