intelligent_shipping_ws/rl-baselines3-zoo.tar/rl-baselines3-zoo/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ship3dof-remote
  namespace: ship3dof
  labels:
    app.kubernetes.io/name: ship3dof
    app.kubernetes.io/component: remote-desktop
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ship3dof
    app.kubernetes.io/component: remote-desktop
  ports:
    - name: novnc
      port: 6080
      targetPort: novnc
      protocol: TCP
    - name: jupyter
      port: 8888
      targetPort: jupyter
      protocol: TCP
    - name: tensorboard
      port: 6006
      targetPort: tensorboard
      protocol: TCP
    - name: ssh
      port: 22
      targetPort: ssh
      protocol: TCP
